--- a/comment.html
+++ b/comment.html
@@ -131,11 +131,11 @@
 						마치 타임머신 같다는 생각이 들었어요.</p>
 						<p class="text">그리고 메이지 시대 들어 전철화가 진행되면서<br class="pc">
 						낮은 거리에 전신주가 세워지고, 전차의 가선이 둘러쳐진 교토의 풍경은<br class="pc">
-						「ファンタジー的異世界」です。<br class="pc">
-						当時の人々はそんな光景を目の当たりにしつつ、どんな未来を思い描いたのでしょう？<br class="pc">
-						それは西暦2000年前後のネット社会への移り変わりに匹敵するくらい<br class="pc">
-						あるいは目に見える分、それ以上に<br class="pc">
-						ドラスティックな変化だったと思うのです。</p>
+						지금 보면「판타지적 이세계」입니다.<br class="pc">
+						당시 사람들은 그런 광경을 보면서 어떤 미래를 꿈꾸었을까요?<br class="pc">
+						그것은 서기 2000년 전후의 인터넷 사회로의 변화에 필적할 정도<br class="pc">
+						혹은 눈에 보이는 만큼, 그 이상으로<br class="pc">
+						과감한 변화였다고 생각합니다.</p>
 						<p class="text">当時の人々の想像力はとても豊かで、エアコンやテレビ電話は言うに及ばず<br class="pc">
 						巨大な空中戦艦なんかも予想されていたようです。<br class="pc">
 						僕なんかも子供の頃は、21世紀になればヒトは火星や木星に行っていると思ってましたし<br class="pc">
