--- a/comment.html
+++ b/comment.html
@@ -136,24 +136,24 @@
 						그것은 서기 2000년 전후의 인터넷 사회로의 변화에 필적할 정도<br class="pc">
 						혹은 눈에 보이는 만큼, 그 이상으로<br class="pc">
 						과감한 변화였다고 생각합니다.</p>
-						<p class="text">当時の人々の想像力はとても豊かで、エアコンやテレビ電話は言うに及ばず<br class="pc">
-						巨大な空中戦艦なんかも予想されていたようです。<br class="pc">
-						僕なんかも子供の頃は、21世紀になればヒトは火星や木星に行っていると思ってましたし<br class="pc">
-						（当時のアニメや漫画を見てもらえば分かると思いますが）<br class="pc">
-						人間そっくりのアンドロイドやエアカーなんかも現実になっていると思ってました。</p>
-						<p class="text">現在SNSなどでコミュニケーションがとりやすくなった一方、<br class="pc">
-						人との距離感が近すぎるのかギスギスした息苦しさを感じることもあります。<br class="pc">
-						だけど僕はテクノロジーというのは人の幸せの為にあると思うのです。<br class="pc">
-						きっと今の技術も、より良く使えるようになると信じています。</p>
-						<p class="text">この物語の主人公は、電氣の時代がやってきて<br class="pc">
-						これからいろんなものが変わっていく事を夢みる、お寺の息子。<br class="pc">
-						ヒロインは神様を信じる酒造メーカーの娘。</p>
-						<p class="text">激動の明治時代、<br class="pc">
-						現代ほど恋愛は自由ではなかったかもしれませんが<br class="pc">
-						人間の気持ちにそう変わりはないはずです。</p>
-						<p class="text">時代は変われども、人はいつだって恋をするのです。</p>
-						<p class="text">明治元年からちょうど150年にあたる年に、この本を出版できたのは<br class="pc">
-						何かの「縁」みたいなものも感じます。</p>
+						<p class="text">당시 사람들의 상상력은 매우 풍부하여, 에어컨이나 화상 전화는 말할 것도 없고<br class="pc">
+						거대한 공중 전함 같은 것도 예상했던 것 같습니다.<br class="pc">
+						저 같은 사람도 어렸을 때는 21세기가 되면 사람이 화성이나 목성으로 가는 줄 알았고요.<br class="pc">
+						(당시의 애니메이션이나 만화를 보시면 아시겠지만요)<br class="pc">
+						인간을 꼭 닮은 안드로이드나 하늘을 나는 자동차 등도 현실로 나타나고 있다고 생각했습니다.</p>
+						<p class="text">현재 SNS 등을 통해 의사소통을 하기 쉬워진 반면,<br class="pc">
+						사람과의 거리감이 너무 가까워져 답답함을 느낄 수도 있습니다.<br class="pc">
+						하지만 저는 테크놀로지란 사람의 행복을 위해서 있다고 생각합니다.<br class="pc">
+						분명 지금의 기술도 더 잘 사용할 수 있게 될 것이라고 믿고 있습니다.</p>
+						<p class="text">이 이야기의 주인공은 전기의 시대가 오고<br class="pc">
+						앞으로 여러가지가 변해가는 것을 꿈꾸는 절의 아들.<br class="pc">
+						여주인공은 신을 믿는 양조장의 딸.</p>
+						<p class="text">격동의 메이지 시대,<br class="pc">
+						현대만큼 연애는 자유롭지 못했을지도 모르지만 <br class="pc">
+						인간의 기분에는 그다지 변함이 없을 것입니다.</p>
+						<p class="text">시대는 변해도, 사람은 어느 때든 사랑을 합니다.</p>
+						<p class="text">메이지 원년부터 정확히 150년에 해당하는 해에, 이 책을 출판할 수 있었던 것에 대해<br class="pc">
+						무엇인가의 「인연」 같은 것도 느낍니다.</p>
 					</div>
 				</div>
 				<div class="back">
