--- a/campaign_21thdenmoku.html
+++ b/campaign_21thdenmoku.html
@@ -91,19 +91,19 @@
 					<img src="/camp21thHeading.png">
 				</div>
 				<div class="camp21thIntro">
-					<p>『二十世紀電氣目録』発売記念キャンペーン第2弾「二十一世紀電氣目録をつくろう」でTwitterにて皆様より募集しました、<span class="red">二十一世紀に実現しそうな電化製品・技術のアイディア。</span><br>その中からKAエスマ文庫編集部で厳選した21作品を「二十一世紀電氣目録」として発表！</p>
+					<p>『20세기 전기목록』발매기념 캠페인 제2탄「21세기 전기목록을 만들자」로 Twitter를 통해 여러분으로부터 모집한<span class="red">21세기에 실현될 것 같은 전자제품·기술 아이디어.</span><br>그 중에서도 KA에스마문고 편집부에서 엄선한 21작품을「21세기 전기목록」으로 발표!</p>
 				</div>
 				<div class="camp21thWorkBox">
-					<p class="camp21thWorkHeading">「二十一世紀電氣目録」<span>《全21作品　※五十音順》</span></p>
+					<p class="camp21thWorkHeading">「21세기 전기목록」<span>《전21작품　※오십음도순》</span></p>
 					<ul class="camp21thWorkList">
 						<li class="camp21thWork01 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork01.png"></p>
-							<p class="detail">緊急時にスイッチを押すと身体の周りに外向きの圧縮空気が発生して周囲のものをはじき飛ばす。不審者や交通事故から身を守ってくれる。</p>
-							<p class="author">@Alpher2202 様</p>
+							<p class="name"><img src="/camp21thWork01.png"></p>
+							<p class="detail">긴급 시에 스위치를 누르면 신체 주위에 바깥쪽을 향한 압축 공기가 발생하여 주위의 물건을 튕겨 냅니다. 수상한 사람이나 교통사고로부터 몸을 보호해 줍니다.</p>
+							<p class="author">@Alpher2202 님</p>
 						</li>
 						<li class="camp21thWork02 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork02.png"></p>
-							<p class="detail">地図・ナビ機能が搭載された靴。靴に任せておけば目的地にたどり着く。「近くの美味しいお店」等、漠然とした要求にも対応可能。踵を3回打ち鳴らすと、自動的にホーム（自宅）に誘導。</p>
+							<p class="name"><img src="/camp21thWork02.png"></p>
+							<p class="detail">지도·내비게이션 기능이 탑재된 신발입니다. 신발에 맡겨두면 목적지에 도달할 수 있습니다. 「근처 맛집」 등 막연한 요구에도 대응할 수 있습니다. 발꿈치를 3번 치면 자동으로 홈(자택)으로 유도됩니다.</p>
 							<p class="author"></p>
 						</li>
 						<li class="camp21thWork03 camp21thWork">
