--- a/campaign_21thdenmoku.html
+++ b/campaign_21thdenmoku.html
@@ -91,7 +91,7 @@
 					<img src="/camp21thHeading.png">
 				</div>
 				<div class="camp21thIntro">
-					<p>『20세기 전기목록』발매기념 캠페인 제2탄「21세기 전기목록을 만들자」로 Twitter를 통해 여러분으로부터 모집한<span class="red">21세기에 실현될 것 같은 전자제품·기술 아이디어.</span><br>그 중에서도 KA에스마문고 편집부에서 엄선한 21작품을「21세기 전기목록」으로 발표!</p>
+					<p>『20세기 전기목록』발매기념 캠페인 제2탄「21세기 전기목록을 만들자」로 Twitter를 통해 여러분으로부터 모집한, <span class="red">21세기에 실현될 것 같은 전자제품·기술 아이디어.</span><br>그 중에서도 KA에스마문고 편집부에서 엄선한 21작품을「21세기 전기목록」으로 발표!</p>
 				</div>
 				<div class="camp21thWorkBox">
 					<p class="camp21thWorkHeading">「21세기 전기목록」<span>《전21작품　※오십음도순》</span></p>
@@ -103,58 +103,58 @@
 						</li>
 						<li class="camp21thWork02 camp21thWork">
 							<p class="name"><img src="/camp21thWork02.png"></p>
-							<p class="detail">지도·내비게이션 기능이 탑재된 신발입니다. 신발에 맡겨두면 목적지에 도달할 수 있습니다. 「근처 맛집」 등 막연한 요구에도 대응할 수 있습니다. 발꿈치를 3번 치면 자동으로 홈(자택)으로 유도됩니다.</p>
+							<p class="detail">지도·내비게이션 기능이 탑재된 신발. 신발에 맡겨두면 목적지에 도달할 수 있습니다. 「근처 맛집」 등 막연한 요구에도 대응할 수 있습니다. 발꿈치를 3번 치면 자동으로 홈(자택)으로 유도됩니다.</p>
 							<p class="author"></p>
 						</li>
 						<li class="camp21thWork03 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork03.png"></p>
-							<p class="detail">簡単なエピソード記憶を一時的に消すことができる。一度読んだ小説や見た作品、原作を知っているアニメ等を視聴するときに便利。</p>
-							<p class="author">@AKASAKA0421 様</p>
+							<p class="name"><img src="/camp21thWork03.png"></p>
+							<p class="detail">간단한 에피소드의 기억을 일시적으로 지울 수 있습니다. 한 번 읽은 소설이나 본 작품, 원작을 알고 있는 애니메이션 등을 시청할 때 편리합니다.</p>
+							<p class="author">@AKASAKA0421 님</p>
 						</li>
 						<li class="camp21thWork04 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork04.png"></p>
-							<p class="detail">紙や装置がなくても空気に絵や文字が自由に書ける筆。所定の時間で消える。</p>
-							<p class="author">@Alpher2202 様</p>
+							<p class="name"><img src="/camp21thWork04.png"></p>
+							<p class="detail">종이나 장치가 없어도 공기에 그림이나 글씨를 자유롭게 쓸 수 있는 붓. 시간이 지나면 사라집니다.</p>
+							<p class="author">@Alpher2202 님</p>
 						</li>
 						<li class="camp21thWork05 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork05.png"></p>
-							<p class="detail">文字通り空中に浮かぶ都市。人工知能が基本的に管理している。地震や台風などを避け、地上に降りる事なく自給自足が出来るシステムが構築されている。他の空中都市とドッキングする事も出来る。様々な国が共同で作った空中都市もあり、国境がない空中都市もある。</p>
-							<p class="author">@hayate_1108 様</p>
+							<p class="name"><img src="/camp21thWork05.png"></p>
+							<p class="detail">말 그대로 공중에 떠있는 도시. 인공지능이 기본적으로 관리하고 있습니다. 지진이나 태풍 등을 피해 지상에 내려오지 않고 자급자족할 수 있는 시스템이 구축되어 있습니다. 다른 공중도시와 도킹할 수도 있습니다. 여러 나라가 공동으로 만든 공중도시도 있고, 국경이 없는 공중도시도 있습니다.</p>
+							<p class="author">@hayate_1108 님</p>
 						</li>
 						<li class="camp21thWork06 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork06.png"></p>
-							<p class="detail">配色で迷ったときに、少しでも配色を決めやすくする為の材料をくれる小型メカ。指紋から思考を読み取り、数パターンの配色の画像を作成してスマホに送信してくれる。画像と共に「配色の名称・与えるイメージ・その配色が好きな年齢」等の情報も同時に送信してくれる。</p>
-							<p class="author">@rotoki_Retrospe 様</p>
+							<p class="name"><img src="/camp21thWork06.png"></p>
+							<p class="detail">배색으로 고민할 때 조금이라도 배색을 결정하기 쉽게 하기 위한 재료를 주는 소형 메카. 지문에서 사고를 읽어내 여러 패턴의 배색 이미지를 제작하여 스마트폰으로 전송합니다. 이미지와 함께 「배색명칭·부여하는 이미지·배색을 좋아하는 나이」등의 정보도 동시에 전송해 줍니다.</p>
+							<p class="author">@rotoki_Retrospe 님</p>
 						</li>
 						<li class="camp21thWork07 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork07.png"></p>
-							<p class="detail">地震・津波・火山噴火等の災害の被害を最大限までに抑える装置。</p>
+							<p class="name"><img src="/camp21thWork07.png"></p>
+							<p class="detail">지진·해일·화산 분화 등의 재해의 피해를 최대한까지 억제하는 장치.</p>
 							<p class="author"></p>
 						</li>
 						<li class="camp21thWork08 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork08.png"></p>
-							<p class="detail">定番の豚の形をしたキーホルダーが蚊の羽音の周波数を検知して、殺虫剤を噴射する。別に線香ではない。</p>
-							<p class="author">@AKASAKA0421 様</p>
+							<p class="name"><img src="/camp21thWork08.png"></p>
+							<p class="detail">일반적인 돼지 모양의 열쇠 고리가 모기 날개 소리의 주파수를 감지하여 살충제를 분사합니다. 모기향은 아닙니다.</p>
+							<p class="author">@AKASAKA0421 님</p>
 						</li>
 						<li class="camp21thWork09 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork09.png"></p>
-							<p class="detail">着地する際に靴底から強力な電磁波を放ち、最大100メートルから飛び降りることが可能になる靴。もしもの時の為に安全装置も付いている。付属として、着地点の方を向くだけで安全確認・視界の確保をしてくれる特殊ゴーグルも付いている。</p>
-							<p class="author">@rotoki_Retrospe 様</p>
+							<p class="name"><img src="/camp21thWork09.png"></p>
+							<p class="detail">착지 시 밑창에서 강력한 전자파를 뿜어 최대 100미터에서 뛰어내릴 수 있는 신발. 만약의 경우를 위해서 안전장치도 달려 있습니다. 추가로 착지점 쪽을 향하는 것만으로 안전 확인·시야 확보를 해주는 특수 고글도 붙어 있습니다.</p>
+							<p class="author">@rotoki_Retrospe 님</p>
 						</li>
 						<li class="camp21thWork10 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork10.png"></p>
-							<p class="detail">使っていないときは姿を消してくれる家電。家が狭い人に人気。</p>
-							<p class="author">@Raisewonozomu 様</p>
+							<p class="name"><img src="/camp21thWork10.png"></p>
+							<p class="detail">사용하지 않을 때에는 자취를 감춰주는 가전제품. 집이 좁은 사람에게 인기입니다.</p>
+							<p class="author">@Raisewonozomu 님</p>
 						</li>
 						<li class="camp21thWork11 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork11.png"></p>
-							<p class="detail">災害時に耳にイヤフォン(紐なしタイプ)を付けるだけで｢災害情報｣や｢安否確認｣や｢友人｣と連絡が取れるツール。過去の教訓を活かし、いざという時にすぐに安心できるよう開発された。災害時以外でも普通に使える。</p>
-							<p class="author">@carom_come 様</p>
+							<p class="name"><img src="/camp21thWork11.png"></p>
+							<p class="detail">재해시에 귀에 이어폰(끈이 없는 타입)을 붙이는 것만으로 「재해 정보」나 「안부 확인」이나 「친구」와 연락을 취할 수 있는 툴. 과거의 교훈을 살려, 만일의 경우에 곧바로 안심할 수 있도록 개발되었습니다. 재해시 이외에도 일반적으로 사용할 수 있습니다.</p>
+							<p class="author">@carom_come 님</p>
 						</li>
 						<li class="camp21thWork12 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork12.png"></p>
-							<p class="detail">形状は映写機と似ている。映写機のどこかに手を触れ、目を閉じた状態で何かを想像すると、そのイメージがそのまま映写機からスクリーンに投影される。しかし目を閉じてなくてはいけないので、残念だが自分で観ることは出来ない。</p>
-							<p class="author">@reila0823 様</p>
+							<p class="name"><img src="/camp21thWork12.png"></p>
+							<p class="detail">형상은 영사기와 비슷합니다. 영사기 어딘가에 손을 대고 눈을 감은 상태에서 무언가를 상상하면 그 이미지가 그대로 영사기로부터 스크린에 투영됩니다. 그러나 눈을 감고 있지 않으면 안 되기 때문에, 유감이지만 스스로는 볼 수 없습니다.</p>
+							<p class="author">@reila0823 님</p>
 						</li>
 						<li class="camp21thWork13 camp21thWork">
 							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork13.png"></p>
