--- a/campaign_21thdenmoku.html
+++ b/campaign_21thdenmoku.html
@@ -91,7 +91,7 @@
 					<img src="/camp21thHeading.png">
 				</div>
 				<div class="camp21thIntro">
-					<p>『20세기 전기목록』발매기념 캠페인 제2탄「21세기 전기목록을 만들자」로 Twitter를 통해 여러분으로부터 모집한, <span class="red">21세기에 실현될 것 같은 전자제품·기술 아이디어.</span><br>그 중에서도 KA에스마문고 편집부에서 엄선한 21작품을「21세기 전기목록」으로 발표!</p>
+					<p>『20세기 전기목록』발매기념 캠페인 제2탄「21세기 전기목록을 만들자」로 Twitter를 통해 여러분으로부터 모집한, <span class="red">21세기에 실현될 것 같은 전자제품·기술의 아이디어.</span><br>그 중에서도 KA에스마문고 편집부에서 엄선한 21작품을「21세기 전기목록」으로 발표!</p>
 				</div>
 				<div class="camp21thWorkBox">
 					<p class="camp21thWorkHeading">「21세기 전기목록」<span>《전21작품　※오십음도순》</span></p>
@@ -157,56 +157,56 @@
 							<p class="author">@reila0823 님</p>
 						</li>
 						<li class="camp21thWork13 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork13.png"></p>
-							<p class="detail">着てボタンを押すと、肌で感じることの出来ない少量の電気が流れるスーツ。一定時間着ると、体内の不要物を取り除く効果がある。また、現在起こっている病気を知らせてくれるセンサーが付いており、早期発見にも役立つ。</p>
-							<p class="author">@rotoki_Retrospe 様</p>
+							<p class="name"><img src="/camp21thWork13.png"></p>
+							<p class="detail">입고 버튼을 누르면 피부로 느낄 수 없는 소량의 전기가 흐르는 슈트. 일정 시간 착용하면 체내의 불순물을 제거해 줍니다. 또한 현재 일어나고 있는 질병을 알려주는 센서가 부착되어 있어 질병의 조기 발견에도 도움이 됩니다.</p>
+							<p class="author">@rotoki_Retrospe 님</p>
 						</li>
 						<li class="camp21thWork14 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork14.png"></p>
-							<p class="detail">電気で水を弾くフィールドエリアを身体の上に展開して雨や落雷を凌ぐことができる。傘を物理的に持つ必要もなくなり、風で壊れることもない。</p>
-							<p class="author">@kyopee24 様</p>
+							<p class="name"><img src="/camp21thWork14.png"></p>
+							<p class="detail">전기로 물을 튕기는 필드를 몸 위로 전개하여 비나 낙뢰를 막을 수 있습니다. 우산을 물리적으로 들 필요도 없고 바람에 망가지는 일도 없습니다.</p>
+							<p class="author">@kyopee24 님</p>
 						</li>
 						<li class="camp21thWork15 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork15.png"></p>
-							<p class="detail">電場を操作し、周囲の人の使用者に対する認識を操ることができる。総理大臣セットならば、周囲の人が使用者のことを総理大臣だと認識してしまう。</p>
-							<p class="author">@isono_technocut 様</p>
+							<p class="name"><img src="/camp21thWork15.png"></p>
+							<p class="detail">전기장을 조작하여 주위 사람의 사용자에 대한 인식을 조종할 수 있습니다. 총리대신 세트라면 주위 사람들이 사용자를 총리대신이라고 인식해 버리고 맙니다.</p>
+							<p class="author">@isono_technocut 님</p>
 						</li>
 						<li class="camp21thWork16 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork16.png"></p>
-							<p class="detail">呑む人の気分に応じてビリリと辛口からソフトな甘口までそのとき一番呑みたい味に変化してくれる日本酒。</p>
-							<p class="author">@Alpher2202 様</p>
+							<p class="name"><img src="/camp21thWork16.png"></p>
+							<p class="detail">마시는 사람의 기분에 따라 톡 쏘는 맛부터 부드러운 단맛까지 그 때 가장 마시고 싶은 맛으로 변화시켜 주는 사케.</p>
+							<p class="author">@Alpher2202 님</p>
 						</li>
 						<li class="camp21thWork17 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork17.png"></p>
-							<p class="detail">朝に材料を入れると電気で自動調理し、昼にはおいしい弁当が出来上がっている。</p>
-							<p class="author">@Stellalnerrans 様</p>
+							<p class="name"><img src="/camp21thWork17.png"></p>
+							<p class="detail">아침에 재료를 넣으면 전기로 자동 조리하고, 점심에는 맛있는 도시락이 완성되어 있습니다.</p>
+							<p class="author">@Stellalnerrans 님</p>
 						</li>
 						<li class="camp21thWork18 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork18.png"></p>
-							<p class="detail">ヘッドホンのような電極を頭に装着することにより、脳内に直説画像を表示することができる。テレビやパソコンの画面を見るのにモニタがいらなくなる。カメラと接続して視力を失った人の目の代わりにもなる。</p>
-							<p class="author">@heifetz1901 様</p>
+							<p class="name"><img src="/camp21thWork18.png"></p>
+							<p class="detail">헤드폰과 같은 전극을 머리에 장착함으로써 뇌 안에 직접적으로 이미지를 표시할 수 있습니다. 텔레비전이나 컴퓨터 화면을 보는데 모니터가 필요가 없게 됩니다. 카메라와 접속해 시력을 잃은 사람의 눈을 대신할 수도 있습니다.</p>
+							<p class="author">@heifetz1901 님</p>
 						</li>
 						<li class="camp21thWork19 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork19.png"></p>
-							<p class="detail">部屋の中にある、あらゆる物がどこにあるか教えてくれるナビ。整理整頓が苦手で「あの資料どこに置いてたっけ？」となっても困らない。</p>
-							<p class="author">@kyopee24 様</p>
+							<p class="name"><img src="/camp21thWork19.png"></p>
+							<p class="detail">방 안에 있는 모든 물건이 어디에 있는지 알려주는 내비게이션. 정리정돈이 서툴러서 「그 자료 어디다 두었지?」 라고 해도 곤란하지 않을 것입니다.</p>
+							<p class="author">@kyopee24 님</p>
 						</li>
 						<li class="camp21thWork20 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork20.png"></p>
-							<p class="detail">異国の言葉のみならず、犬、猫、鳥などあらゆる種の言語を翻訳する万能翻訳機。言葉が通じる事により、より深いコミュニケーションが実現。種族を超えた恋愛が可能に！（AIが“恋に効く語録”を状況に応じて瞬時に提供するオプションも）</p>
+							<p class="name"><img src="/camp21thWork20.png"></p>
+							<p class="detail">외국어 뿐만 아니라 개, 고양이, 새 등 모든 종류의 언어를 번역하는 만능 번역기. 말이 통하는 것으로, 보다 깊은 커뮤니케이션이 실현. 국적을 초월한 연애를 가능하게! (AI가"사랑에 효과가 있는 어록"을 상황에 따라 순식간에 제공하는 옵션도)</p>
 							<p class="author"></p>
 						</li>
 						<li class="camp21thWork21 camp21thWork">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thWork21.png"></p>
-							<p class="detail">コンタクトレンズにカメラ機能が搭載され、度数を自由に調整できるだけでなく、目にした景色や物体を｢撮る｣という思考回路が働くと同時に｢画像｣｢動画｣として何も持たずに撮影できる。悪しき思考が混ざると目に激痛が走る。</p>
-							<p class="author">@carom_come 様</p>
+							<p class="name"><img src="/camp21thWork21.png"></p>
+							<p class="detail">콘택트렌즈에 카메라 기능이 탑재되어 도수를 자유롭게 조정할 수 있을 뿐만 아니라, 보고 있는 경치나 물체를 「찍는다」라고 하는 사고가 작용함과 동시에 「사진」「동영상」으로써 아무것도 가지지 않고 촬영할 수 있습니다. 나쁜 생각이 섞이면 눈에 심한 통증이 와요.</p>
+							<p class="author">@carom_come 님</p>
 						</li>
 					</ul>
-					<p class="camp21thWorkNote">※応募いただいた作品は、掲載するにあたり一部加筆・修正を加えております。</p>
-					<p class="camp21thNezumi"><img src="/books/20thdenmoku/img/camp21th/camp21thNezumi.png"></p>
+					<p class="camp21thWorkNote">※응모해 주신 작품은 게재하는 데 있어서 일부 가필·수정을 더하고 있습니다.</p>
+					<p class="camp21thNezumi"><img src="/camp21thNezumi.png"></p>
 				</div>
 				<div class="camp21thAnothBox">
-					<p class="camp21thAnothIntro">さらに……KAエスマ文庫編集部Twitterにて発表した、<br>著者：結城 弘、イラスト：池田和美、美術・背景：長谷百香、推薦者：石原立也、による4作品を掲載！</p>
+					<p class="camp21thAnothIntro">또한…… KA에스마문고 편집부가 Twitter에 발표한<br>저자：유키 히로, 일러스트：이케다 카스미, 미술・배경：하세 모모카, 추천자：이시하라 타츠야, 에 의해 쓰여진 4가지 작품을 발표!</p>
 					<ul class="camp21thAnothList">
 						<li class="camp21thWork01 camp21thAnoth">
 							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thAnoth01.png"></p>
