--- a/campaign_21thdenmoku.html
+++ b/campaign_21thdenmoku.html
@@ -229,7 +229,7 @@
 				
 				
 				<div class="back">
-					<a href="/books/20thdenmoku/#special">
+					<a href="https://20thdenmoku.github.io/#special">
 					<span></span>BACK
 					</a>
 				</div>
@@ -244,7 +244,7 @@
 		<section class="footerContent">
 		<!-- SNS固定コンテンツ -->
 			<div class="snsFixed pc">
-				<p class="snsFixedText"><img src="/books/20thdenmoku/img/top/snsFixedText.png"></p>
+				<p class="snsFixedText"><img src="/snsFixedText.png"></p>
 				<ul class="snsFixedSocialList socialList">
 					<li class="tw">
 						<a href="https://twitter.com/intent/tweet?text=KA%e3%82%a8%e3%82%b9%e3%83%9e%e6%96%87%e5%ba%ab%e3%80%8e%e4%ba%8c%e5%8d%81%e4%b8%96%e7%b4%80%e9%9b%bb%e6%b0%a3%e7%9b%ae%e9%8c%b2%e3%80%8f%e3%81%84%e3%81%a4%e3%81%a0%e3%81%a3%e3%81%a6%e4%ba%ba%e3%81%af%e6%81%8b%e3%82%92%e3%81%99%e3%82%8b%0d%0a&url=http://www.kyotoanimation.co.jp/books/20thdenmoku/&hashtags=でんもく" rel=”nofollow” target="_blank" class="icon-tw"></a>
@@ -274,15 +274,15 @@
 			<!--  banner  -->
 			<ul class="bannerList">
 				<li>
-					<a href="/books/" target="_blank"><img src="/books/20thdenmoku/img/logo/kaesuma.png" alt="KAエスマ文庫"></a>
+					<a href="/books/" target="_blank"><img src="/kaesuma.png" alt="KA에스마문고"></a>
 				</li>
 			</ul>
 			<!--  corporate  -->
 			<p class="corporate">
-				<a href="http://www.kyotoanimation.co.jp/" target="_blank"><img src="/books/20thdenmoku/img/logo/kyotoanimation.png" alt="京都アニメーション"></a>
+				<a href="http://www.kyotoanimation.co.jp/" target="_blank"><img src="/kyotoanimation.png" alt="교토 애니메이션"></a>
 			</p>
 			<!--  copyright  -->
-			<p class="copyright">&copy;結城 弘／京都アニメーション</p>
+			<p class="copyright">&copy;유키 히로／교토 애니메이션</p>
 		</section>
 	</div>
 	
