--- a/campaign_21thdenmoku.html
+++ b/campaign_21thdenmoku.html
@@ -209,20 +209,20 @@
 					<p class="camp21thAnothIntro">또한…… KA에스마문고 편집부가 Twitter에 발표한<br>저자：유키 히로, 일러스트：이케다 카스미, 미술・배경：하세 모모카, 추천자：이시하라 타츠야, 에 의해 쓰여진 4가지 작품을 발표!</p>
 					<ul class="camp21thAnothList">
 						<li class="camp21thWork01 camp21thAnoth">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thAnoth01.png"></p>
-							<p class="detail">アダムスキー型UFOの形をしたドローン。BDなどをケースから回収し、再生機器まで運んでセットする。使用者はその場から動かずに映像鑑賞やディスクの出し入れが可能。リモコンに付いているディスクトレイ開閉ボタンにさりげなく活躍の場を与えるニクい奴。</p>
+							<p class="name"><img src="/camp21thAnoth01.png"></p>
+							<p class="detail">아담스키형 UFO 형태의 드론. BD 등을 케이스에서 회수하여 재생기기까지 운반하여 세팅합니다. 사용자는 그 자리에서 움직이지 않고 영상 감상이나 디스크의 열람이 가능합니다. 리모컨에 달린 디스크 트레이 개폐 버튼에 아무렇지도 않게 활약의 장을 만들어주는 착한 녀석입니다.</p>
 						</li>
 						<li class="camp21thWork02 camp21thAnoth">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thAnoth02.png"></p>
-							<p class="detail">外出中、手がふさがっている時に荷物を持ってくれたり、身体を支えてくれたりする便利な手（腕）を空中に出現させる装置。</p>
+							<p class="name"><img src="/camp21thAnoth02.png"></p>
+							<p class="detail">외출 중, 손이 막혀 있을 때 짐을 들어주거나 몸을 지탱해주거나 하는 편리한 손(팔)을 공중에 출현시키는 장치입니다.</p>
 						</li>
 						<li class="camp21thWork03 camp21thAnoth">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thAnoth03.png"></p>
-							<p class="detail">電気の光を集めて金魚の形にした光り輝く金魚。空中を自由に泳ぐことができる。夏の夜の風物詩になっている。</p>
+							<p class="name"><img src="/camp21thAnoth03.png"></p>
+							<p class="detail">전깃불을 모아 금붕어 모양으로 만든 반짝이는 금붕어. 공중을 자유롭게 헤엄칠 수 있습니다. 여름밤의 풍물시가 되고 있습니다.</p>
 						</li>
 						<li class="camp21thWork04 camp21thAnoth">
-							<p class="name"><img src="/books/20thdenmoku/img/camp21th/camp21thAnoth04.png"></p>
-							<p class="detail">ネットと脳が直結することでコンピューターにアシストしてもらい、人間の思考スピードが速くなる。自分の時間感覚では３日間絵コンテを描いていたが、実は数時間しか経っていなかった…みたいな。</p>
+							<p class="name"><img src="/camp21thAnoth04.png"></p>
+							<p class="detail">인터넷과 뇌가 직결됨으로써 컴퓨터에 도움을 받아 인간의 사고 속도가 빨라집니다. 자신의 시간 감각으로는 3일 동안 그림콘티를 그리고 있었지만, 실은 몇시간 밖에 지나지 않았던 것 같습니다.</p>
 						</li>
 					</ul>
 				</div>
