--- a/campaign_21thdenmoku.html
+++ b/campaign_21thdenmoku.html
@@ -206,7 +206,7 @@
 					<p class="camp21thNezumi"><img src="/camp21thNezumi.png"></p>
 				</div>
 				<div class="camp21thAnothBox">
-					<p class="camp21thAnothIntro">또한…… KA에스마문고 편집부가 Twitter에 발표한<br>저자：유키 히로, 일러스트：이케다 카스미, 미술・배경：하세 모모카, 추천자：이시하라 타츠야, 에 의해 쓰여진 4가지 작품을 발표!</p>
+					<p class="camp21thAnothIntro">또한…… KA에스마문고 편집부가 Twitter에 발표한<br>저자：유키 히로, 일러스트：이케다 카스미, 미술·배경：하세 모모카, 추천자：이시하라 타츠야, 에 의해 쓰여진 4가지 작품을 발표!</p>
 					<ul class="camp21thAnothList">
 						<li class="camp21thWork01 camp21thAnoth">
 							<p class="name"><img src="/camp21thAnoth01.png"></p>
