--- a/campaign_21thdenmoku.html
+++ b/campaign_21thdenmoku.html
@@ -217,11 +217,11 @@
 							<p class="detail">외출 중, 손이 막혀 있을 때 짐을 들어주거나 몸을 지탱해주거나 하는 편리한 손(팔)을 공중에 출현시키는 장치입니다.</p>
 						</li>
 						<li class="camp21thWork03 camp21thAnoth">
-							<p class="name"><img src="/camp21thAnoth03.png"></p>
+							<p class="name"><img src="/212103.png"></p>
 							<p class="detail">전깃불을 모아 금붕어 모양으로 만든 반짝이는 금붕어. 공중을 자유롭게 헤엄칠 수 있습니다. 여름밤의 풍물시가 되고 있습니다.</p>
 						</li>
 						<li class="camp21thWork04 camp21thAnoth">
-							<p class="name"><img src="/camp21thAnoth04.png"></p>
+							<p class="name"><img src="/212104.png"></p>
 							<p class="detail">인터넷과 뇌가 직결됨으로써 컴퓨터에 도움을 받아 인간의 사고 속도가 빨라집니다. 자신의 시간 감각으로는 3일 동안 그림콘티를 그리고 있었지만, 실은 몇시간 밖에 지나지 않았던 것 같습니다.</p>
 						</li>
 					</ul>
