--- a/movie.html
+++ b/movie.html
@@ -99,7 +99,7 @@
 					<div class="movieIndiv2 movieIndiv">
 						<a href="https://www.youtube.com/watch?v=Sf89ZRufIs0" class="youtube">
 						<img src="/movie2.jpg">
-						<p class="play"><img src="/books/20thdenmoku/img/movie/play.png"></p>
+						<p class="play"><img src="/play.png"></p>
 						</a>
 						<p class="name">CM 15초 Ver.</p>
 					</div>
