--- a/movie.html
+++ b/movie.html
@@ -60,7 +60,7 @@
 	<header class="headerWrap">
 		<div class="headerBox">
 			<div class="navigationBtn">
-				<h1 class="logo"><a href="/logo.png"></a></h1>
+				<h1 class="logo"><a href="https://20thdenmoku.github.io/"><img src="/logo.png"></a></h1>
 				<p class="naviBtn"><span></span></p>
 			</div>
 			<nav class="navigationWrap">
