--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 					<ul class="data1" style="user-select: auto;">
 						<li style="user-select: auto;">저자：유키 히로</li>
 						<li style="user-select: auto;">일러스트：이케다 카스미</li>
-						<li style="user-select: auto;">미술・배경：하세 모모카</li>
+						<li style="user-select: auto;">미술·배경：하세 모모카</li>
 					</ul>
 					<ul class="data2" style="user-select: auto;">
 						<li style="user-select: auto;">발매일：2018년 8월 10일</li>
