--- a/sample.html
+++ b/sample.html
@@ -311,15 +311,15 @@
 			<!--  banner  -->
 			<ul class="bannerList">
 				<li>
-					<a href="/books/" target="_blank"><img src="/books/20thdenmoku/img/logo/kaesuma.png" alt="KAエスマ文庫"></a>
+					<a href="/books/" target="_blank"><img src="/kaesuma.png" alt="KA에스마문고"></a>
 				</li>
 			</ul>
 			<!--  corporate  -->
 			<p class="corporate">
-				<a href="http://www.kyotoanimation.co.jp/" target="_blank"><img src="/books/20thdenmoku/img/logo/kyotoanimation.png" alt="京都アニメーション"></a>
+				<a href="http://www.kyotoanimation.co.jp/" target="_blank"><img src="/kyotoanimation.png" alt="교토 애니메이션"></a>
 			</p>
 			<!--  copyright  -->
-			<p class="copyright">&copy;結城 弘／京都アニメーション</p>
+			<p class="copyright">&copy;유키 히로／교토 애니메이션</p>
 		</section>
 	</div>
 	
