--- a/sample.html
+++ b/sample.html
@@ -4,7 +4,7 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 
 <meta charset="utf-8">
-<title>코멘트 | 『20세기 전기목록』 홈페이지 한글화 | KA에스마문고</title>
+<title>미리보기 | 『20세기 전기목록』 홈페이지 한글화 | KA에스마문고</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -89,7 +89,7 @@
 					<h2 class="borderBox">TRIAL READING</h2>
 					<div class="heading">
 						<h2>TRIAL READING</h2>
-						<p>「二十世紀電氣目録」試し読み</p>
+						<p>「20세기 전기목록」미리보기</p>
 					</div>
 				</div>
 			</div>
@@ -193,7 +193,7 @@
 					 少年は目尻に涙をためたまま、それでも得意気な笑みを崩さずに言った。<br>
 					「坂本、<ruby>喜八<rt>きはち</rt></ruby>」
 					</p>
-					<div class="sampleNezumi"><img src="/books/20thdenmoku/img/sample/sampleNezumi.png"></div>
+					<div class="sampleNezumi"><img src="/sampleNezumi.png"></div>
 					<p>
 					 同じ帰り道というので、喜八と名乗った少年と一緒に参道を下りることになった。<br>
 					 背は稲子より少し高いくらいで、歳は同じ十五歳。大津にある寺の生まれで、親戚の店を手伝いながら京都の中学校に通っており、今は夏休み中とのことだった。<br>
@@ -250,23 +250,23 @@
 					 その一文とともに、裏面には『<ruby>夜不知<rt>よるしらず</rt></ruby>』や『<ruby>電砲<rt>でんぽう</rt></ruby>』などの文字や説明文が走り書きされていて、図面のようなものも描かれている。所々斜線で消された箇所があり、何かの覚え書きのようだった。これは受け取ってよかった物だろうかと思ったが、返すあてもなかったので、稲子は気になりつつも引き札を片付けた。
 					</p>
 					<div class="sampleBoxSale">
-						<p class="name">「二十世紀電氣目録」<br class="sp">好評発売中！</p>
+						<p class="name">「20세기 전기목록」<br class="sp">호평 발매 중!</p>
 						<div class="saleLink">
 							<div class="kyoanishop">
 								<a href="http://kyoanishop.com/shopdetail/000000001538/" target="_blank">
-									京アニショップ！で購入する<span></span>
+									쿄애니 샵!에서 구입하기<span></span>
 								</a>
 							</div>
 							<div class="store">
-								<a href="/books/retailer/" target="_blank">
-									KAエスマ文庫取扱い店舗を探す<span></span>
+								<a href="https://www.kyotoanimation.co.jp/books/retailer/" target="_blank">
+									KA에스마문고 취급 점포 찾기<span></span>
 								</a>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="back">
-					<a href="/books/20thdenmoku/#special">
+					<a href="https://20thdenmoku.github.io/#special">
 					<span></span>BACK
 					</a>
 				</div>
@@ -281,7 +281,7 @@
 		<section class="footerContent">
 		<!-- SNS固定コンテンツ -->
 			<div class="snsFixed pc">
-				<p class="snsFixedText"><img src="/books/20thdenmoku/img/top/snsFixedText.png"></p>
+				<p class="snsFixedText"><img src="/snsFixedText.png"></p>
 				<ul class="snsFixedSocialList socialList">
 					<li class="tw">
 						<a href="https://twitter.com/intent/tweet?text=KA%e3%82%a8%e3%82%b9%e3%83%9e%e6%96%87%e5%ba%ab%e3%80%8e%e4%ba%8c%e5%8d%81%e4%b8%96%e7%b4%80%e9%9b%bb%e6%b0%a3%e7%9b%ae%e9%8c%b2%e3%80%8f%e3%81%84%e3%81%a4%e3%81%a0%e3%81%a3%e3%81%a6%e4%ba%ba%e3%81%af%e6%81%8b%e3%82%92%e3%81%99%e3%82%8b%0d%0a&url=http://www.kyotoanimation.co.jp/books/20thdenmoku/&hashtags=でんもく" rel=”nofollow” target="_blank" class="icon-tw"></a>
