--- a/sample.html
+++ b/sample.html
@@ -30,7 +30,7 @@
 <link rel="shortcut icon" href="/favicon.png" type="image/vnd.microsoft.icon" sizes="16x16">
 <link rel="icon" type="image/png" href="/favicon.png">
 
-<!-- fonts --->
+<!-- fonts1222 --->
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300&display=swap" rel="stylesheet" style="user-select: auto;">
 <!-- css -->
 <link rel="stylesheet" href="/common.css" style="user-select: auto;">
