--- a/sample.html
+++ b/sample.html
@@ -165,7 +165,7 @@
 					<a href="http://line.me/R/msg/text/?KA%e3%82%a8%e3%82%b9%e3%83%9e%e6%96%87%e5%ba%ab%e3%80%8e%e4%ba%8c%e5%8d%81%e4%b8%96%e7%b4%80%e9%9b%bb%e6%b0%a3%e7%9b%ae%e9%8c%b2%e3%80%8f%e3%81%84%e3%81%a4%e3%81%a0%e3%81%a3%e3%81%a6%e4%ba%ba%e3%81%af%e6%81%8b%e3%82%92%e3%81%99%e3%82%8b%0d%0ahttp%3a%2f%2fwww%2ekyotoanimation%2eco%2ejp%2fbooks%2f20thdenmoku%2f%0d%0a" rel=”nofollow” target="_blank" class="icon-li"></a>
 				</li>
 			</ul>
-			<!--  banner  -->
+			<!--  banner 34343443 -->
 			<ul class="bannerList">
 				<li>
 					<a href="/books/" target="_blank"><img src="/kaesuma.png" alt="KA에스마문고"></a>
