--- a/sample.html
+++ b/sample.html
@@ -103,11 +103,9 @@
                                                                 </a>
                                                         </div>
                                         </div>
-					</p>
-					<div class="sampleNezumi"><img src="/sampleNezumi.png"></div>
-					
+					</p>        				
 					<div class="sampleBoxSale">
-						<p class="name">「20세기 전기목록」<br class="sp">호평 발매 중!</p>
+						<p class="name">「20세기 전기목록」 호평 발매 중!</p>
 						<div class="saleLink">
 							<div class="kyoanishop">
 								<a href="http://kyoanishop.com/shopdetail/000000001538/" target="_blank">
