--- a/sample.html
+++ b/sample.html
@@ -94,6 +94,9 @@
 				</div>
 			</div>
 			<div class="sample lowerItem">
+                                        </p>
+					<div class="sampleNezumi"><img src="/books/20thdenmoku/img/sample/sampleNezumi.png"></div>
+					<p>
 				<div class="sampleBox lowerBox">
                                         </p>                                    
                                         <div class="sampleBoxSale">
