--- a/sample.html
+++ b/sample.html
@@ -94,10 +94,9 @@
 				</div>
 			</div>
 			<div class="sample lowerItem">
-                                        </p>
-					<div class="sampleNezumi"><img src="/books/20thdenmoku/img/sample/sampleNezumi.png"></div>
-					<p>
 				<div class="sampleBox lowerBox">
+                                        </p>
+                                        <div class="sampleNezumi"><img src="/sampleNezumi.png"></div>
                                         </p>                                    
                                         <div class="sampleBoxSale">
                                                 <p class="name">「20세기 전기목록」 츄라이 츄라이!</p>
