--- a/campaign_21thdenmoku.html
+++ b/campaign_21thdenmoku.html
@@ -88,7 +88,7 @@
 		<section class="mapContent lowerContent">
 			<div class="camp21th">
 				<div class="camp21thHeading">
-					<img src="/camp21thHeading.png">
+					<img src="/1212222222222222222.png">
 				</div>
 				<div class="camp21thIntro">
 					<p>『20세기 전기목록』발매기념 캠페인 제2탄「21세기 전기목록을 만들자」로 Twitter를 통해 여러분으로부터 모집한, <span class="red">21세기에 실현될 것 같은 전자제품·기술의 아이디어.</span><br>그 중에서도 KA에스마문고 편집부에서 엄선한 21작품을「21세기 전기목록」으로 발표!</p>
