--- a/glossary.html
+++ b/glossary.html
@@ -1,82 +1,61 @@
 
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ko">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NF8GDXW');</script>
-<!-- End Google Tag Manager -->
-
 <meta charset="utf-8">
-<title>用語集 | 『二十世紀電氣目録』公式サイト | KAエスマ文庫</title>
+<title>용어집 | 『20세기 전기목록』 홈페이지 한글화 | KA에스마문고</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no, email=no, address=no">
 	
-<meta name="description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする 京都アニメーション新プロジェクト始動！文庫好評発売中！＆アニメにします。">
-<meta name="keywords" content="京都アニメーション,京アニ,アニメーションDo,KAエスマ文庫,二十世紀電氣目録,二十世紀電気目録,でんもく,結城 弘,池田和美,長谷百香">
-<meta name="copyright" content="©結城 弘／京都アニメーション">
+<meta name="description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다 교토 애니메이션 신 프로젝트 시동! 문고 호평 발매 중! & 애니화합니다." style="user-select: auto;">
+<meta name="keywords" content="교토 애니메이션,교토 애니메이션Do,KA에스마문고,20세기 전기목록,유키 히로,이케다 카즈미,하세 모모카" style="user-select: auto;">
+<meta name="copyright" content="©유키 히로／교토 애니메이션" style="user-select: auto;">
 
-<meta property="og:title" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
-<meta property="og:description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする">
-<meta property="og:url" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/">
+<meta property="og:title" content="『20세기 전기목록』 홈페이지 한글화 - KA에스마문고">
+<meta property="og:description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다">
+<meta property="og:url" content="https://20thdenmoku.github.io/books/20thdenmoku/">
 <meta property="og:type" content="website">
-<meta property="og:image" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/img/social.jpg">
-<meta property="og:site_name" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
+<meta property="og:image" content="https://20thdenmoku.github.io/books/20thdenmoku/img/social.jpg">
+<meta property="og:site_name" content="『20세기 전기목록』 홈페이지 한글화 - KA에스마문고">
 <meta property="og:locale" content="ja_JP">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@KA_esuma">
-<meta name="twitter:title" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
-<meta name="twitter:description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする">
-<meta name="twitter:image" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/img/social.jpg">
+<meta name="twitter:title" content="『20세기 전기목록』 홈페이지 한글화 - KA에스마문고">
+<meta name="twitter:description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다">
+<meta name="twitter:image" content="https://20thdenmoku.github.io/books/20thdenmoku/img/social.jpg">
 
-<link rel="shortcut icon" href="/books/20thdenmoku/img/favicon.ico" type="image/vnd.microsoft.icon" sizes="16x16">
-<link rel="icon" type="image/png" href="/img/favicon.png">
+<link rel="shortcut icon" href="/favicon.png" type="image/vnd.microsoft.icon" sizes="16x16">
+<link rel="icon" type="image/png" href="/favicon.png">
 
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Raleway:300,500" rel="stylesheet">
+<!-- fonts --->
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300&display=swap" rel="stylesheet" style="user-select: auto;">
 <!-- css -->
-<link rel="stylesheet" href="/books/20thdenmoku/css/common.css">
+<link rel="stylesheet" href="/common.css" style="user-select: auto;">
+<link rel="stylesheet" href="/main.css" style="user-select: auto;">
+<link rel="stylesheet" href="/lower.css" style="user-select: auto;">
 
-<link rel="stylesheet" href="/books/20thdenmoku/css/main.css">
-<link rel="stylesheet" href="/books/20thdenmoku/css/lower.css">
 
 
 <!-- js -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="/jquery.min.js" style="user-select: auto;"></script>
 <script>window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script>
-<script type="text/javascript" src="/books/20thdenmoku/js/common.js"></script>
-
-<script type="text/javascript" src="/books/20thdenmoku/js/main.js"></script>
-<script type="text/javascript" src="/books/20thdenmoku/js/lower.js"></script>
-
+<script type="text/javascript" src="/common.js" style="user-select: auto;"></script>
+<script type="text/javascript" src="/main.js" style="user-select: auto;"></script>
+<script type="text/javascript" src="/lower.js" style="user-select: auto;"></script>
 
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-17203208-1"></script>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
 
-	gtag('config', 'UA-17203208-1');
-</script>
+
 
 
 
 </head>
 
-<body class="dir-glossary lower">
+<body class="dir-comment lower">
 
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF8GDXW"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 
 
 <div id="overlay"></div>
@@ -87,18 +66,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<header class="headerWrap">
 		<div class="headerBox">
 			<div class="navigationBtn">
-				<h1 class="logo"><a href="/books/20thdenmoku/"><img src="/books/20thdenmoku/img/logo/logo.png"></a></h1>
+				<h1 class="logo"><a href="https://20thdenmoku.github.io/"><img src="/logo.png"></a></h1>
 				<p class="naviBtn"><span></span></p>
 			</div>
 			<nav class="navigationWrap">
 				<div class="navigationBgSp sp"></div>
-				<div class="navigationLogoSp sp"><a href="/books/20thdenmoku/"><img src="/books/20thdenmoku/img/logo/logo.png"></a></div>
+				<div class="navigationLogoSp sp"><a href="https://20thdenmoku.github.io/"><img src="/logo.png"></a></div>
 				<ul class="navigationList">
-					<li><a href="/books/20thdenmoku/#intro">INTRODUCTION</a></li>
-					<li><a href="/books/20thdenmoku/#story">STORY</a></li>
-					<li><a href="/books/20thdenmoku/#chara">CHARACTER</a></li>
-					<li><a href="/books/20thdenmoku/#special">SPECIAL</a></li>
-					<li><a href="/books/20thdenmoku/#books">BOOKS</a></li>
+					<li><a href="https://20thdenmoku.github.io/#intro">INTRODUCTION</a></li>
+					<li><a href="https://20thdenmoku.github.io/#story">STORY</a></li>
+					<li><a href="https://20thdenmoku.github.io/#chara">CHARACTER</a></li>
+					<li><a href="https://20thdenmoku.github.io/#special">SPECIAL</a></li>
+					<li><a href="https://20thdenmoku.github.io/#books">BOOKS</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -110,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<h2 class="borderBox">GLOSSARY</h2>
 					<div class="heading">
 						<h2>GLOSSARY</h2>
-						<p>用語集</p>
+						<p>용어집</p>
 					</div>
 				</div>
 			</div>
