--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://20thdenmoku.github.io/glossary/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/glossary" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="/specialList7.png" style="user-select: auto;">
 								</div>
